[package]
name = "merge_gt_vcf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vcf = "^0.6.0"
flate2 = "^1"
rayon = "^1.5.2"
mimalloc = { version = "0.1.17", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
